Make book image work on post pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@ website: pragprog.com/titles/dhwcr
       {% endif %}
       <br />
       <br />
-      <a id="book" href="http://pragprog.com/titles/dhwcr"><img src="book.png" /></a>
+      <a id="book" href="http://pragprog.com/titles/dhwcr"><img src="/book.png" /></a>
       <ul>
         {% if page.website %}
           <li><a href="http://{{ page.website }}">{{ page.website }}</a>
