--- a/css/application.css
+++ b/css/application.css
@@ -589,6 +589,8 @@ a:hover {
   color: red;
 }
 
+@media only screen and (min-width: 480px) {
+
 /* line 38, ../../app/assets/stylesheets/posts.css.scss */
 header#sidebar {
   width: 159px;
@@ -934,4 +936,15 @@ label {
 #content .archive_link {
   float:right;
   margin:20px 40px;
+}
+
+}
+
+@media only screen and (max-width: 480px) {
+header ul {
+  display: none;
+}
+header img {
+  display: none;
+}
 }
