--- a/_includes/themes/the-program/post.html
+++ b/_includes/themes/the-program/post.html
@@ -21,19 +21,19 @@
 							<span class="year">{{ page.date | date: '%Y' }}</span>
 							</date>
 						</p>
-						<ul class="list-category list-linear">
+						<!-- ul class="list-category list-linear">
 							<li class="list-head">category: </li>
 							{% assign categories_list = page.categories %}
 							{% include JB/categories_list %}
-						</ul>
-						<ul class="list-tag list-linear">
+						</ul -->
+						<!-- ul class="list-tag list-linear">
 							<li class="list-head">tags: </li>
 							{% assign tags_list = page.tags %}
 							{% include JB/tags_list %}
-						</ul>
+						</ul -->
 					</div><!-- meta -->
 				</div><!-- entry-content -->
-				<div class="misc-content">
+				<!-- div class="misc-content">
 					<div class="social">
 						<ul class="list-linear">
 							<li><div class="twitter-tweet"><a href="https://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="{{ site.author.twitter }}" data-lang="en">Tweet</a></div></li>
