Make links actually discernible from the text

--- a/assets/themes/the-program/css/style.css
+++ b/assets/themes/the-program/css/style.css
@@ -559,15 +559,15 @@ html {
 /* LINK */
 a:link {
   color: #2d2d2d;
-  text-decoration: none;
+/*  text-decoration: none; */
 }
 a:visited {
   color: #141414;
-  text-decoration: none;
+/*  text-decoration: none; */
 }
 a:hover {
   color: #474747;
-  text-decoration: none;
+/*  text-decoration: none; */
 }
 /* HIGHLIGHTER */
 pre {
