--- a/assets/themes/the-program/css/style.less
+++ b/assets/themes/the-program/css/style.less
@@ -32,15 +32,15 @@ html {
 a {
 	&:link {
 		color: @main-font-color;
-		text-decoration: none;
+/*		text-decoration: none; */
 	}
 	&:visited {
 		color: darken(@main-font-color, 10%);
-		text-decoration: none;
+/*		text-decoration: none; */
 	}
 	&:hover {
 		color: lighten(@main-font-color, 10%);
-		text-decoration: none;
+/*		text-decoration: none; */
 	}
 }
 
